[metadata]
name = pyvnc
version = 2.0.0
author = Barney Gale
description = Pure Python VNC client library
long_description = file: README.rst
url = https://github.com/barneygale/pytest-vnc
license = GPL

[options]
packages = pyvnc
python_requires = >= 3.9
install_requires =
    cryptography>=45.0.0,<46.0.0
    keysymdef>=1.2.0,<2.0.0
    numpy>=1.24.0,<3.0.0

[options.extras_require]
dev = 
    Pillow>=11.0.0,<12.0.0
test = 
    %(dev)s
    python-dotenv>=1.0.0,<2.0.0
